<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutChickenSold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextChickenSold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_chickenSold"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="#FFF" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutChicksSold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextChicksSold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_chicksSold"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="#FFF" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayouteggsSold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTexteggsSold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_chicksSold"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="#FFF" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatincomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/save" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>